Align mobile video list pages closer to native apps, remove unnecessary translation calls

--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -355,3 +355,41 @@
 #video-publisher
   h1
     margin-bottom: 15px
+
+// MOBILE styles
+
+#video-series.mobile-client
+  .inner
+    margin-top: 0
+    padding: 0
+
+  .pub-banner
+    width: 100%
+
+  #episodes
+    margin: 0 0 20px 0
+
+    a
+      height: auto
+      width: auto
+
+      .info
+        background: image-url("videos-thumb-grad.png") repeat-x
+
+      .info:hover
+        background-position: 0px 0px
+
+    li
+      float: none
+      margin: 0 0 2px 0
+
+#videos-index.mobile-client
+  .inner
+    margin-top: 0
+    padding: 0
+
+  .resource_list
+    li.video
+      width: auto
+      margin: 0 0 10px 0
+      float: none
