--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -2,6 +2,9 @@
 - @sidebar = false
 - @title = "Watch videos"
 
+- content_for :title do
+  = "Videos" #TODO: Needs localization.
+
 %article
   .inner
     %h1
