Video player properly sized for mobile devices.

--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -283,6 +283,10 @@
 // -------------- Video detail page
 #video-show
 
+  #player-container
+    width: 908px
+    height: 511px
+
   #title-bar
     margin-bottom: 10px
     .share
@@ -393,3 +397,9 @@
       width: auto
       margin: 0 0 10px 0
       float: none
+
+#video-show.mobile-client
+  #player-container
+    width: auto
+    height: auto
+
