--- a/app/views/shared/_menu_settings.html.haml
+++ b/app/views/shared/_menu_settings.html.haml
@@ -3,64 +3,64 @@
     &nbsp;
   .tab_navigation.settings.mobile
     .inner_wrapper
-      %a.font{:href => '#font', :class => 'selected'} 
+      %a.font{href: '#font', class: 'selected'} 
         = t('Font')
-      %a.font_size{:href => '#size'}
+      %a.font_size{href: '#size'}
         = t('Size')
-      %a.extras{:href => '#extras'}
+      %a.extras{href: '#extras'}
         = t('Extras')
-  %form.dynamic_menu_inner{:action => ''}
+  %form.dynamic_menu_inner{action: ''}
     %fieldset.clearfix#font_settings
       %p.gutter_bottom_half
         %b
           = t('.font')
       %span.float_left.width_50
-        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_helvetica', :type => 'radio', :name => 'user_setting_font', :id => 'radio_helvetica', :value => 'Helvetica', :checked => 'checked'}
-        %label.user_setting_font_helvetica{:for => 'radio_helvetica'}
+        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_helvetica', type: 'radio', name: 'user_setting_font', id: 'radio_helvetica', value: 'Helvetica', checked: 'checked'}
+        %label.user_setting_font_helvetica{for: 'radio_helvetica'}
           = t('.font1')
       %span.float_left.width_50
-        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_georgia', :type => 'radio', :name => 'user_setting_font', :id => 'radio_georgia', :value => 'Georgia', :checked => ('checked' if client_settings.reader_font == "user_setting_font_georgia")}
-        %label.user_setting_font_georgia{:for => 'radio_georgia'}
+        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_georgia', type: 'radio', name: 'user_setting_font', id: 'radio_georgia', value: 'Georgia', checked: ('checked' if client_settings.reader_font == "user_setting_font_georgia")}
+        %label.user_setting_font_georgia{for: 'radio_georgia'}
           = t('.font2')
       %span.float_left.width_50
-        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_baskerville', :type => 'radio', :name => 'user_setting_font', :id => 'radio_baskerville', :value => 'Baskerville', :checked => ('checked' if client_settings.reader_font == "user_setting_font_baskerville")}
-        %label.user_setting_font_baskerville{:for => 'radio_baskerville'}
+        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_baskerville', type: 'radio', name: 'user_setting_font', id: 'radio_baskerville', value: 'Baskerville', checked: ('checked' if client_settings.reader_font == "user_setting_font_baskerville")}
+        %label.user_setting_font_baskerville{for: 'radio_baskerville'}
           = t('.font3')
       %span.float_left.width_50
-        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_verdana', :type => 'radio', :name => 'user_setting_font', :id => 'radio_verdana', :value => 'Verdana', :checked => ('checked' if client_settings.reader_font == "user_setting_font_verdana")}
-        %label.user_setting_font_verdana{:for => 'radio_verdana'}
+        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_verdana', :type => 'radio', :name => 'user_setting_font', :id => 'radio_verdana', value: 'Verdana', checked: ('checked' if client_settings.reader_font == "user_setting_font_verdana")}
+        %label.user_setting_font_verdana{for: 'radio_verdana'}
           = t('.font4')
     %fieldset.clearfix.hide_list#size_settings
       %p.gutter_bottom_half
         %b
           = t('.font size')
       %span.float_left.width_33
-        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_small', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_small', :checked => 'checked'}
-        %label{:for => 'user_setting_size_small'}
+        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_small', type: 'radio', name: 'user_setting_size', id: 'user_setting_size_small', checked: ('checked' if client_settings.reader_font_size=="user_setting_size_small")}
+        %label{for: 'user_setting_size_small'}
           = t('.small')
       %span.float_left.width_33
-        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_medium', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_medium', :checked => ('checked' if client_settings.reader_font_size=="user_setting_size_medium")}
-        %label{:for => 'user_setting_size_medium'}
+        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_medium', type: 'radio', name: 'user_setting_size', id: 'user_setting_size_medium', checked: 'checked'}
+        %label{for: 'user_setting_size_medium'}
           = t('.medium')
       %span.float_left.width_33
-        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_large', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_large', :checked => ('checked' if client_settings.reader_font_size=="user_setting_size_large")}
-        %label{:for => 'user_setting_size_large'}
+        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_large', type: 'radio', name: 'user_setting_size', id: 'user_setting_size_large', checked: ('checked' if client_settings.reader_font_size=="user_setting_size_large")}
+        %label{for: 'user_setting_size_large'}
           = t('.large')
     %fieldset.clearfix.hide_list#extra_settings
       %p.gutter_bottom_half
         %b
           = t('.extras')
       %span.float_left.width_50
-        %input.checkbox_user_setting{type:"checkbox", name: "user_setting_trans_notes", :id => 'user_setting_trans_notes', :checked => ('checked' if client_settings.reader_trans_notes == "true")}
+        %input.checkbox_user_setting{type: "checkbox", name: "user_setting_trans_notes", id: 'user_setting_trans_notes', checked: ('checked' if client_settings.reader_trans_notes == "true")}
         %label{for: 'user_setting_trans_notes'}
           = t('.translation notes')
       %span.float_left.width_50
-        %input.checkbox_user_setting{type:"checkbox", name: "user_setting_cross_refs", id: 'user_setting_cross_refs', :checked => ('checked' if client_settings.reader_cross_refs == "true")}
+        %input.checkbox_user_setting{type: "checkbox", name: "user_setting_cross_refs", id: 'user_setting_cross_refs', checked: ('checked' if client_settings.reader_cross_refs == "true")}
         %label{for: 'user_setting_cross_refs'}
           = t('.cross references')
       - if current_auth
         %span.float_left.width_50
-          %input.checkbox_user_setting{type:"checkbox", name: "user_setting_show_highlights", id: 'user_setting_show_highlights', :checked => ('checked' if client_settings.reader_highlights == "true")}
+          %input.checkbox_user_setting{type: "checkbox", name: "user_setting_show_highlights", id: 'user_setting_show_highlights', checked: ('checked' if client_settings.reader_highlights == "true")}
           %label{for: 'user_setting_show_highlights'}
             = t('.highlights')
     %fieldset.clearfix{style: "display: none"}
@@ -68,12 +68,12 @@
         %b
           = t('.highlights')
       %span.float_left.width_33
-        %input.radio_user_setting{:type => 'radio', :name => 'user_setting_highlights', :id => 'user_setting_highlights_on', :checked => 'checked'}
-        %label{:for => 'user_setting_highlights_on'}
+        %input.radio_user_setting{type: 'radio', name: 'user_setting_highlights', id: 'user_setting_highlights_on', checked: 'checked'}
+        %label{for: 'user_setting_highlights_on'}
           = t('.on')
       %span.float_left.width_33
-        %input.radio_user_setting{'data-setting-size' => 'user_setting_highlights_off', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_highlights_off'}
-        %label{:for => 'user_setting_highlights_off'}
+        %input.radio_user_setting{'data-setting-size' => 'user_setting_highlights_off', type: 'radio', name: 'user_setting_size', id: 'user_setting_highlights_off'}
+        %label{for: 'user_setting_highlights_off'}
           = t('.off')
 
   .mobile
