--- a/app/views/users/resend_confirmation.html.haml
+++ b/app/views/users/resend_confirmation.html.haml
@@ -1,3 +1,8 @@
+- @main_nav = false
+
+- content_for :sidebar do
+  = render "shared/widget_ad_bible_app"
+
 %article
   %h1= t('users.resend confirmation title')
   %p= t('users.resend confirmation copy')
