--- a/app/views/users/resend_confirmation_success.html.haml
+++ b/app/views/users/resend_confirmation_success.html.haml
@@ -1,2 +1,7 @@
+- @main_nav = false
+
+- content_for :sidebar do
+  = render "shared/widget_ad_bible_app"
+
 %article
-  %p= t('users.resend success')
+  %h2= t('users.resend success')
