Minor tweaks, plus deleting files that didn't delete during rebase.

--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -114,17 +114,11 @@
   .activity span
     background: image-url("mobile/profile_tabs_sprite.png") no-repeat center 10px
 
-  .friends span
-    background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -42px
-
   .notes span
     background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -98px
 
   .bookmarks span
     background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -152px
-
-  .likes span
-    background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -206px
 
   .badges span
     background: image-url("mobile/profile_tabs_sprite.png") no-repeat center -259px
@@ -132,9 +126,7 @@
   .badges,
   .activity,
   .notes,
-  .bookmarks,
-  .friends,
-  .likes
+  .bookmarks
     background-repeat: no-repeat
     background-size: auto
 
