css clean up - part 1

--- a/app/assets/stylesheets/mobile/_modal_window.sass
+++ b/app/assets/stylesheets/mobile/_modal_window.sass
@@ -2,20 +2,12 @@
 #modal_overlay
   display: block
 
-#modal_overlay
-  background: rgba(#000, 0.8) image-url("modal_overlay.png")
-  position: fixed
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
-  z-index: 6
-
 #modal_window
   border-radius: 0px !important
   +box-shadow(rgba(#000, 0.5) 0 5px 20px 0)
   background: #f1f1f1
   overflow: hidden
+  height: 800px
   width: 100% !important
   position: absolute
   top: -46px
