Added spacing around "SENHOR" (LORD in English)
Temp fix until we get the source code redone.
https://youversion.sifterapp.com/issues/812

--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -450,6 +450,13 @@ span.fqa {
   margin-bottom: 0;
 }
 
+// Temp fix to Portugese NVI version to give spacing around "SENHOR" (or "LORD" in English)
+// .nd refers to "name of deity"
+.vid129 .nd {
+  padding: 0 5px;
+}
+
+
 //Certain headlines should be centered in NABRE
 .vid463 div.s2 {
   text-align:center;
