--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,19 @@
   container_classes << "no_primary_nav" if @main_nav == false
   container_class_str = container_classes.join(" ")
 
+  # Used for primary / mobile navs
+  is_authed         = current_auth ? true : false
+  is_bible_url      = controller.controller_name == "references" && controller.action_name == "show"
+  is_videos_url     = controller_name == "videos"
+  is_bookmarks_url  = controller_name == "bookmarks"
+  is_plans_url      = controller_name == "plans" || controller_name == "subscriptions"
+
+  # refactor all of these (pull logic to set nav from controllers, etc)
+  is_notes_url      = @nav == :notes
+
+  # quick method to return a class of "highlighted"/" " depending on whether the passed test evaluates to true/false
+  highlight = Proc.new {|test| test ? "highlighted" : ""}
+
 %html{class: (@html_classes.join(' ') if @html_classes), "data-locale" => I18n.locale, id: @html_id}
 
   %head{lang: 'en-us'}
@@ -16,8 +29,7 @@
     = render '/shared/google_analytics'
 
   %body
-    #wrapper{class: @fixed_width == true ? 'fixed_width' : ''}
-
+    #wrapper
       = content_for?(:header) ? yield(:header) : render("/shared/header/default")
 
       - flash.each do |key, msg|
@@ -25,10 +37,64 @@
 
       #container{class: container_class_str}
         #main{role: "main", class: @is_reader == true ? 'main_reader' : ''}
-          = render partial: '/shared/nav_primary' unless @main_nav == false
+
+          - #--------- Begin Primary Navigation
+          - unless @main_nav == false
+
+            #nav_primary{:role => "navigation"}
+              %nav
+                %ul
+                  %li#nav_primary_bible{class: highlight.call(is_bible_url) }
+                    %a.icon{href: '/bible'}
+                      %span &nbsp;
+                    %a.tooltip{href: "/bible", style:"display: none;"}
+                      %span= t('bible')
+
+                  %li#nav_primary_plans{class: highlight.call(is_plans_url)}
+                    - plan_href = is_authed ? user_subscriptions_path(current_auth.username) : plans_path
+                    %a.icon{href: plan_href }
+                      %span &nbsp;
+                    %a.tooltip{href: plan_href, style:"display: none;"}
+                      %span=t("plans.title")
+
+                  - if Video.available_locales.include? I18n.locale
+                    %li#nav_primary_videos{class: highlight.call(is_videos_url)}
+                      %a.icon{href:"/videos"}
+                        %span &nbsp;
+                      %a.tooltip{href:"/videos", style:"display: none;"}
+                        %span=t("videos")
+
+                  %li#nav_primary_bookmarks{class: highlight.call(is_bookmarks_url)}
+                    - bookmark_href = is_authed ? user_bookmarks_path(current_auth.username) : sign_up_path(source: "bookmark")
+                    %a.icon{href: bookmark_href}
+                      %span &nbsp;
+                    %a.tooltip{href: bookmark_href, style:"display: none;"}
+                      %span= t('bookmarks.title')
+
+                  %li#nav_primary_notes{class: highlight.call(is_notes_url)}
+                    - notes_href = is_authed ? user_notes_path(current_auth.username) : notes_path
+                    %a.icon{href: notes_href}
+                      %span &nbsp;
+                    %a.tooltip{href: notes_href, style: "display: none;"}
+                      %span=t("notes title")
+
+                  %li#nav_primary_live
+                    - live_href = "http://#{([:de, :es, :fr, :ko, :nl, :no, :pt, :ru, :zh_CN, :zh_TW].include?(I18n.locale) ? I18n.locale : :www).to_s.downcase.gsub("_", "-")}.a.youversion.com/live"
+                    %a.icon{href: live_href}
+                      %span &nbsp;
+                    %a.tooltip{href: live_href, style: "display: none;"}
+                      %span=t("live")
+
+                  %li#nav_primary_mobile
+                    %a.icon{href: '/mobile'}
+                      %span &nbsp;
+                    %a.tooltip{href: '/mobile', style: "display: none;"}
+                      %span=t("mobile")
+
+          - #--------- End Primary Navigation
+
           = content_for?(:main) ? yield(:main) : yield
-          - if content_for? :main_trailer
-            = yield :main_trailer
+
         #sidebar
           - if content_for? :sidebar
             = yield :sidebar
@@ -36,5 +102,51 @@
             - unless (@sidebar == false || sidebar_presenter.blank?)
               = render partial: sidebar_presenter.sidebar_partial, locals: {presenter: sidebar_presenter}
 
-      = render partial: '/shared/nav_mobile' unless @main_nav == false
+
+      - #--------- Begin Mobile Navigation
+      - unless @main_nav == false
+        #nav_mobile.mobile{role:"navigation"}
+          %nav
+            %ul
+              %li#nav_mobile_bible{class: highlight.call(is_bible_url)}
+                %a.icon{href:'/bible'}
+                  %span= t('bible')
+              %li#nav_mobile_plans{class: highlight.call(is_plans_url)}
+                %a.icon{href: plan_href}
+                  %span=t("plans.title")
+              %li#nav_mobile_videos{class: highlight.call(is_videos_url)}
+                %a.icon{href: '/videos'}
+                  %span=t("videos")
+              %li#nav_mobile_bookmarks{class: highlight.call(is_bookmarks_url)}
+                %a.icon{href: bookmark_href}
+                  %span= t('bookmarks.title')
+              %li#nav_mobile_notes{class: highlight.call(is_notes_url)}
+                %a.icon{href: notes_href}
+                  %span=t("notes title")
+              - if current_auth
+                %li#nav_mobile_profile
+                  %a.icon{href: user_path(current_auth.username)}
+                    %span=t("Profile")
+              %li#nav_mobile_live
+                %a.icon{href: live_href}
+                  %span=t("live")
+              %li#nav_mobile_mobile
+                %a.icon{href:'/mobile'}
+                  %span=t("mobile apps")
+          %nav
+            %ul
+              - if is_authed
+                %li#nav_mobile_sign_out
+                  %a{href: sign_out_path}
+                    =t("sign out")
+              - else
+                %li#nav_mobile_sign_in
+                  %a{href: sign_in_path(redirect: params[:redirect])}
+                    =t("sign in")
+                %li#nav_mobile_sign_up
+                  %a{href: sign_up_path(redirect: params[:redirect])}
+                    =t("sign up")
+
+      - #--------- End Mobile Navigation
+
       = render partial: '/shared/footer', locals: {footer_classes: container_class_str}
