Accounts::Confirmation model, better messaging around resending confirmation emails.

--- a/app/views/shared/_form_errors.html.haml
+++ b/app/views/shared/_form_errors.html.haml
@@ -1,6 +1,9 @@
 - if errors.any?
   .form_errors
-    %h4=heading
+
+    - if defined?(heading)
+      %h4=heading
+
     %ul
       - errors[:base].each do |e|
         %li= e
