Fix email delivery / catch up settings, refactor settings page markup and css.

--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -482,3 +482,9 @@ dd .icon_settings
 .cal_month .hidden
   height: 35px
   padding: 0
+
+
+
+.mobile-client
+  #flash_notice, #flash_error
+    margin: 0 !important
