--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -36,6 +36,7 @@
 @import wysiwyg/jquery.wysiwyg
 @import webfonts
 @import videos
+@import subscriptions
 @import plans
 @import licenses
 @import notes
@@ -692,25 +693,6 @@
     table:first-child
       margin-top: 20px
 
-  #subscriptions-index
-    .rp_settings
-      clear: both
-
-      div
-        padding: 0 20px
-        div
-          padding: 0
-
-      h5
-        margin-bottom: 8px
-
-      .faux_checkbox
-        margin-top: 0px
-
-  #main article.rp_settings
-    .float_left,
-    .float_right
-      float: none !important
 
   // ----------------- Video pages
   #videos-index
