Compat mode for OJ.dump

--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -63,4 +63,4 @@
   / This will be cached along with the entire template
   %script
     :plain
-      var version_json = #{Oj.dump(version_json).html_safe};
+      var version_json = #{Oj.dump(version_json, mode: :compat).html_safe};
