Updated button styles to be consistent with native and mobile apps

--- a/app/assets/stylesheets/_sidebar.sass
+++ b/app/assets/stylesheets/_sidebar.sass
@@ -14,13 +14,15 @@
 // Overrides => Call to action.
 //
 
-#sidebar .action_button_blue,
 #sidebar .action_button_green,
 #donate_now_wrap .action_button_green
   +border-radius(4px)
-  +box-shadow(#fff 0 -1px 0 0)
   font-size: 17px
   margin-top: 1px
+  border: 1px solid #91B164
+
+#sidebar .action_button_blue
+  border: 1px solid #0077b4
 
 #sidebar .action_button_blue:active,
 #sidebar .action_button_green:active,
