--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -197,8 +197,12 @@ button,
 input[type="button"],
 input[type="submit"],
 input[type="reset"]
-  border: 1px solid #aaa
+  border: 1px solid #aeaeae
   color: #0084c8
+  background-color: #E5E5E5
+  padding: 8px 15px
+  +box-shadow(#ddd 0 1px 3px 0, inset rgba(255,255,255, 0.8) 0 2px 0 0, inset rgba(0,0,0, 0.10) 0 -2px 0 0)
+  font-size: 13px
 
 button:hover,
 input[type="button"]:hover,
@@ -358,35 +362,24 @@ button.color
 input[type="submit"].action_button_green,
 input[type="submit"].action_button_blue,
 input[type="submit"].action_button_red,
+button.action_button_blue,
+button.action_button_green,
+button.action_button_red,
 .action_button_blue,
 .action_button_green,
 .action_button_green
-  +border-radius(16px)
-  +box-shadow(inset rgba(#fff, 0.3) 0 1px 0 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
-  border: 1px solid #666
+  +border-radius(5px)
   display: inline-block
   font:
     size: 15px
     weight: bold
   line-height: 1.3
   text-align: center
-  text-shadow: rgba(#000, 0.5) 0 1px 0
+  text-shadow: rgba(#000, 0.5) 0 -1px 0
   padding: 7px 20px
+  +box-shadow(#ccc 0 1px 3px 0, inset rgba(255,255,255, 0.3) 0 2px 0 0, inset rgba(0,0,0, 0.15) 0 -2px 0 0)
+  background-image: none
 
-.action_button_blue.dark,
-.action_button_green.dark,
-.action_button_green.dark:active,
-  +border-radius(16px)
-  +box-shadow(inset rgba(#fff, 0.3) 0 1px 0 0, #222 0 1px 0 0, #333 0 0 0 5px)
-  border: none
-  display: inline-block
-  font:
-    size: 15px
-    weight: bold
-  line-height: 1.3
-  text-align: center
-  text-shadow: rgba(#000, 0.5) 0 1px 0
-  padding: 7px 20px
 
 input[type="submit"].action_button_green,
 input[type="submit"].action_button_red,
@@ -401,33 +394,20 @@ input[type="submit"].action_button_blue,
   text-decoration: none
 
 
-input[type="submit"].action_button_green:focus,
-input[type="submit"].action_button_green:active,
-input[type="submit"].action_button_blue:focus,
-input[type="submit"].action_button_blue:active,
-input[type="submit"].action_button_red:focus,
-input[type="submit"].action_button_red:active,
-.action_button_green:focus,
-.action_button_green:active,
-.action_button_blue:focus,
-.action_button_blue:active,
-.action_button_red:focus,
-.action_button_red:active,
-  +box-shadow(#fff 0 1px 0 0, #eeedeb 0 0 0 5px, inset rgba(#000, 0.5) 0 5px 10px 0)
-
 // Green Action Buttons
 
-input[type="submit"].action_button_green, .action_button_green
-  +background-image(linear-gradient(#81a950, #679037))
-  background-color: #81a950
+input[type="submit"].action_button_green,
+button.action_button_green,
+.action_button_green
+  background-color: #91B164
+  background-image: none
 
 .action_button_green:hover,
-input[type="submit"].action_button_green:hover,
 .action_button_green:focus,
-input[type="submit"].action_button_green:focus,
 .action_button_green:active,
+input[type="submit"].action_button_green:hover,
+input[type="submit"].action_button_green:focus,
 input[type="submit"].action_button_green:active
-  +background-image(linear-gradient(#5d832f, #436916))
   background-color: #5d832f
 
 input[type="submit"].action_button_green:focus,
@@ -441,51 +421,57 @@ input[type="submit"].action_button_green,
 .action_button_green:hover,
 .action_button_green:focus,
 .action_button_green:active
-  border-color: #607346
-
-input[type="submit"].action_button_blue, .action_button_blue
-  +background-image(linear-gradient(#1a90cd, #0077b4))
-  background-color: #0077b4
+  border: 1px solid #91B164
 
 
 //Blue Action Buttons
 
+input[type="submit"].action_button_blue,
+input[type="button"].action_button_blue,
+.action_button_blue,
+a.action_button_blue
+  background-color: #0099CC
+  border: 1px solid #0077b4
+
 input[type="submit"].action_button_blue:hover,
 input[type="submit"].action_button_blue:focus,
 input[type="submit"].action_button_blue:active,
+input[type="button"].action_button_blue:hover,
+input[type="button"].action_button_blue:focus,
+input[type="button"].action_button_blue:active,
 .action_button_blue:hover,
 .action_button_blue:focus,
 .action_button_blue:active
-  +background-image(linear-gradient(#1a7aab, #006091))
-  background-color: #006091
+  background-color: #0F7BB0
+
 
 input[type="submit"].action_button_blue:focus,
 input[type="submit"].action_button_blue:active,
+input[type="button"].action_button_blue:focus,
+input[type="button"].action_button_blue:active,
 .action_button_blue:focus,
 .action_button_blue:active
   color: #87abbe
 
-input[type="submit"].action_button_blue,
-.action_button_blue,
-.action_button_blue:hover,
-.action_button_blue:active,
-.action_button_blue:focus
-  border-color: #0077b4
 
 // Red Action Button
 
-input[type="submit"].action_button_red, .action_button_red
-  +background-image(linear-gradient(#e24d4d, #c23737))
-  background-color: #e24d4d
+input[type="submit"].action_button_red,
+button.action_button_red,
+a.action_button_red,
+.action_button_red
+  background-color: #CC0000
+  background-image: none
+  border: 1px solid #B20000
 
 .action_button_red:hover,
-input[type="submit"].action_button_red:hover,
 .action_button_red:focus,
-input[type="submit"].action_button_red:focus,
 .action_button_red:active,
+input[type="submit"].action_button_red:hover,
+input[type="submit"].action_button_red:focus,
 input[type="submit"].action_button_red:active
-  +background-image(linear-gradient(#b13c3c, #972c2c))
-  background-color: #5d832f
+  background-image: none
+  background-color: #B30F0A
 
 input[type="submit"].action_button_red:focus,
 input[type="submit"].action_button_red:active,
@@ -500,9 +486,8 @@ input[type="submit"].action_button_red,
 .action_button_red:active
   border-color: #ab2929
 
-input[type="submit"].action_button_blue, .action_button_blue
-  +background-image(linear-gradient(#1a90cd, #0077b4))
-  background-color: #0077b4
+
+// Small action buttons
 
 .sm_action_button_blue,
 .sm_action_button_green
