--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -13,6 +13,7 @@
         input.submit
           margin-top: 20px
           line-height: 2em
+          padding: 4px 15px
 
   #filter-message
     text-align: center
