Minor styling tweaks for better display of other languages.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -68,7 +68,8 @@ p
   width: 100%
 
 #hero
-  background: image-url("laptop.jpg") no-repeat 500px 10px
+  background: image-url("laptop.jpg") no-repeat 500px 30px
+  min-height: 290px
   margin-top: 20px
   width: 980px
   margin: 20px auto 0
@@ -77,9 +78,9 @@ p
     padding-left: 20px
 
     h1
-      font: 46px 'RobotoLight', Arial, sans-serif
+      font: 44px RobotoLight, Arial, sans-serif
       letter-spacing: -0.05em
-      width: 545px
+      width: 560px
     p
       font-size: 18px
       color: #666
