Better SEO visibility - inappropriate use of # for links that could be crawled.

--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -5,9 +5,9 @@
         %a.close_btn.reference_close_btn
     .tab_navigation.ref
       .inner_wrapper
-        %a.book{:href => '#book', :class => 'selected'}
+        %a.book{href: '#book', class: 'selected'}
           = t('Book')
-        %a.chapter{:href => '#chapter'}
+        %a.chapter{href:'#chapter'}
           = t('Chapter')
   %br.clear
   .spinner_wrapper{style: "display: none;"}
@@ -22,9 +22,14 @@
         =t("book")
       .scroll
         %ul
+          - ref_str = YouVersion::ReferenceString.new(params[:reference])
+          - chapter, version = "1", ref_str.version
           - @version.books.each do |book_usfm, book_info|
             %li{"data-meta" => truncate(book_info.to_meta, length: 40, separator: " ")}
-              %a{:href => '#', "data-book" => book_usfm.downcase}=  truncate(book_info.human, length: 40, separator: " ")
+              - book = book_usfm.downcase
+              - url = "/bible/#{params[:version]}/#{book}.#{chapter}.#{version}"
+              %a{href: url, "data-book" => book_usfm.downcase}
+                = truncate(book_info.human, length: 40, separator: " ")
     #menu_chapter
       %header
         =t("chapter")
