--- a/app/cells/version_selector/_items.html.haml
+++ b/app/cells/version_selector/_items.html.haml
@@ -1,7 +1,15 @@
+- ref_str = YouVersion::ReferenceString.new(params[:reference])
+- book, chapter = ref_str.book, ref_str.chapter
 - versions.each do |v|
-  %tr{"data-version" => v.id, "data-abbrev" => v.abbreviation.downcase, "data-meta" => v.to_meta}
+  - version = v.abbreviation.downcase
+  - version_id = v.id
+  - version_meta = v.to_meta
+  - url = "/bible/#{version_id}/#{book}.#{chapter}.#{version}"
+
+  %tr{"data-version" => version_id, "data-abbrev" => version, "data-meta" => version_meta}
     %th
-      %a{:href => "#"}= v.human
+      %a{href: url }= v.human
+
     %td{class: v.audio_version? ? "audio" : ""}
-      %a{:href => "#"}
+      %a{href: url}
         %div= v.title
