Using presenter for reference string to correctly interface with reader for subscriptions#show and references#show.

--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -22,12 +22,13 @@
         =t("book")
       .scroll
         %ul
-          - ref_str = YouVersion::ReferenceString.new(params[:reference])
+          - ref_str = @presenter.reference_string
           - chapter, version = "1", ref_str.version
+          - version_id = @presenter.version.id
           - @version.books.each do |book_usfm, book_info|
             %li{"data-meta" => truncate(book_info.to_meta, length: 40, separator: " ")}
               - book = book_usfm.downcase
-              - url = "/bible/#{params[:version]}/#{book}.#{chapter}.#{version}"
+              - url = "/bible/#{version_id}/#{book}.#{chapter}.#{version}"
               %a{href: url, "data-book" => book_usfm.downcase}
                 = truncate(book_info.human, length: 40, separator: " ")
     #menu_chapter
