--- a/app/views/shared/_menu_verse_actions.html.haml
+++ b/app/views/shared/_menu_verse_actions.html.haml
@@ -28,7 +28,7 @@
             %a.color_picker{href:"#"}
             %a.color_picker_holder{href:"#"}
             %button.color.color_picker_clear{type:"submit", name: "remove", value: "true", id:"clear_highlights"}
-            %span.ajax_me{"data-ajax" => highlight_colors_path, "data-dup" => "#dup_mobile_highlights"}
+            %span.ajax_me{"data-ajax" => colors_highlights_path, "data-dup" => "#dup_mobile_highlights"}
           %div.clear
 
     %dt.bookmark
